--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@builder.io/sdk-svelte": "^0.0.3",
     "@builder.io/widgets": "^1.2.23",
     "@juggle/resize-observer": "^3.4.0",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.5.7",
+    "svelte-inview": "^3.0.1",
+    "tinro": "^0.6.12"
   }
 }
